--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -5,7 +5,7 @@ publish_to: 'none'
 
 environment:
   sdk: ^3.4.0
-  flutter: ^3.32.0
+  # flutter: ^3.32.0
 
 dependencies:
   cupertino_icons: ^1.0.8
