--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,15 +4,15 @@ version: 0.5.0+1
 homepage: https://github.com/zulfahmi93/month-year-picker
 
 environment:
-  sdk: ^3.8.0
-  flutter: '>=3.32.0'
+  sdk: ^3.4.0
+  # flutter: '>=3.32.1'
 
 dependencies:
   flutter:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
-  intl: ^0.20.0
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_lints: ^4.0.0
